# ccc-wibe-terminal

./: README.md  install.ps1  install.sh  pyproject.toml
src/sc_cli/: config.py  llm.py  main.py  runner.py
